--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python -m bot.main
+    startCommand: python -m bot.main_simple
     envVars:
       - key: BOT_TOKEN
         sync: false
